--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,28 @@ code {
   background: white;
 }
 
+.popup_spinner {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 100px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 5000;
+}
+
+.popup_spinner_inner {
+  position: relative;
+  top: 30%;
+  width: 40px;
+  height: 40px;
+  margin: auto;
+  opacity: 1;
+}
+
 .input_disabled {
   user-select: none;
   -moz-user-select: none;
